src/test/deca/syntax/valid/without_class/chaine_caractere_special.deca
// Description :
//    test de la d'une chaine de caractere très longue 
//
// Resultats :
//    ok
//
// Historique:
//    cree le 18/01/2023

{
    print("Une chaine de \" un peu \\\\ special");
}