src/test/deca/syntax/invalid/class/error_declaration_class.deca
/// Description:
// 	  Error in a declaration class
// 
//  Resultats:
//    Syntax error
//    line 9
// Historique:
// 	  cree le 18/01/2023
class A() {}